chore: cleanup for release